--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: Platane/snk@v3
         with:
-          github_user_name: Grandlhord
+          github_user_name: dev-gbafa
           svg_out_path: dist/github-contribution-grid-snake.svg
       - uses: crazy-max/ghaction-github-pages@v4
         with:
