--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -8,15 +8,34 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Ensure output directory exists
+        run: mkdir -p dist
+
+      - name: Generate snake SVG
+        uses: Platane/snk@v3
         with:
           github_user_name: dev-gbafa
           svg_out_path: dist/github-contribution-grid-snake.svg
-      - uses: crazy-max/ghaction-github-pages@v4
+
+      - name: Verify SVG was generated
+        run: |
+          if [ ! -f dist/github-contribution-grid-snake.svg ]; then
+            echo "SVG not generated; aborting"; ls -la dist || true; exit 1
+          fi
+          ls -la dist
+
+      - name: Publish to GitHub Pages branch
+        uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
